03-software/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: cilium
  # annotations:
  #   cert-manager.io/cluster-issuer: k3d
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      vlan: lb
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
    hostname: "*.home.arpa"
  # - name: https
  #   port: 443
  #   protocol: HTTPS
  #   hostname: "*.home.arpa"
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - kind: Secret
  #       name: wildcard
  #   allowedRoutes:
  #     namespaces:
  #       from: All
